--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,26 @@
 /*
+    So you like the style of impress.js demo?
+    Or maybe you are just curious how it was done?
+
+    You couldn't find a better place to find out!
+
+    Welcome to the stylesheet impress.js demo presentation.
+
+    Please remember that it is not meant to be a part of impress.js and is
+    not required by impress.js.
+    I expect that anyone creating a presentation for impress.js would create
+    their own set of styles.
+
+    But feel free to read through it and learn how to get the most of what
+    impress.js provides.
+
+    And let me be your guide.
+
+    Shall we begin?
+*/
+
+
+/*
     We start with a good ol' reset.
     That's the one by Eric Meyer http://meyerweb.com/eric/tools/css/reset/
 
@@ -47,6 +69,11 @@ q:before, q:after {
     content: none;
 }
 
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
 /*
     Now here is when interesting things start to appear.
 
@@ -63,13 +90,15 @@ body {
 	text-align: justify;
     min-height: 740px;
 
-    background: rgb(215, 215, 215);
-    background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(rgb(240, 240, 240)), to(rgb(190, 190, 190)));
-    background: -webkit-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
-    background:    -moz-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
-    background:     -ms-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
-    background:      -o-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
-    background:         radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
+    color: rgb(62, 62, 59); /* color: Pantone Black 7 */
+
+    background: rgba(62, 62, 59, 0.2); /* color: 20% Pantone Black 7 */
+    background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(rgba(62, 62, 59, 0.3)), to(rgba(62, 62, 59, 0.1)));
+    background: -webkit-radial-gradient(rgba(62, 62, 59, 0.3), rgba(62, 62, 59, 0.1));
+    background:    -moz-radial-gradient(rgba(62, 62, 59, 0.3), rgba(62, 62, 59, 0.1));
+    background:     -ms-radial-gradient(rgba(62, 62, 59, 0.3), rgba(62, 62, 59, 0.1));
+    background:      -o-radial-gradient(rgba(62, 62, 59, 0.3), rgba(62, 62, 59, 0.1));
+    background:         radial-gradient(rgba(62, 62, 59, 0.3), rgba(62, 62, 59, 0.1));
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
 	-ms-font-smoothing: antialiased;
@@ -81,6 +110,39 @@ body {
 */
 b, strong { font-weight: bold }
 i, em { font-style: italic }
+
+/*
+    Because the main point behind the impress.js demo is to demo impress.js
+    we display a fallback message for users with browsers that don't support
+    all the features required by it.
+
+    All of the content will be still fully accessible for them, but I want
+    them to know that they are missing something - that's what the demo is
+    about, isn't it?
+
+    And then we hide the message, when support is detected in the browser.
+*/
+
+.fallback-message {
+    font-family: sans-serif;
+    line-height: 1.3;
+
+    width: 780px;
+    padding: 10px 10px 0;
+    margin: 20px auto;
+
+    border: 1px solid #E4C652;
+    border-radius: 10px;
+    background: #EEDC94;
+}
+
+.fallback-message p {
+    margin-bottom: 10px;
+}
+
+.impress-supported .fallback-message {
+    display: none;
+}
 
 /*
     Now let's style the presentation steps.
@@ -106,9 +168,9 @@ i, em { font-style: italic }
 
     Basically we remove the margin and make inactive steps a little bit transparent.
 */
-.step {
+.impress-enabled .step {
     margin: 0;
-    opacity: 0.2;
+    opacity: 0.3;
 
     -webkit-transition: opacity 1s;
     -moz-transition:    opacity 1s;
@@ -117,11 +179,8 @@ i, em { font-style: italic }
     transition:         opacity 1s;
 }
 
-.sectionTitle {
-	opacity: 0.0;
-}
-
-.step.active { opacity: 1 }
+.impress-enabled .sectionTitle, .impress-enabled .overlay { opacity: 0.0 }
+.impress-enabled .step.active { opacity: 1 }
 
 /*
     These 'slide' step styles were heavily inspired by HTML5 Slides:
@@ -132,29 +191,34 @@ i, em { font-style: italic }
     They cover everything what you see on first three steps of the demo.
 */
 .slide {
+    display: block;
+
     width: 1024px;
     height: 768px;
 	padding-left: 30px;
 	padding-right: 30px;
 
     background-color: white;
-    border: 2px solid rgba(0, 142, 150, 1.0);
+    border: 2px solid rgb(122, 181, 22); /* color: Pantone 369 */
     border-radius: 10px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
 }
 
 /*
-	This is the first page of a section.
+	sectionTitle is the first page of a section and overlay is quite the same, but with normal font size.
 */
 
-.sectionTitle {
+.sectionTitle, .overlay {
 	margin: auto;
-	font-size:	175%;
-	line-height: 175%;
 	text-align: center;
 	background-color: white;
-	border-left: 2px solid rgba(0, 142, 150, 1.0);
-	border-right: 2px solid rgba(0, 142, 150, 1.0);
+	border-left: 2px solid rgb(122, 181, 22); /* color: Pantone 369 */
+	border-right: 2px solid rgb(122, 181, 22); /* color: Pantone 369 */
+}
+
+.sectionTitle {
+	font-size:	175%;
+	line-height: 175%;
 }
 
 /*
@@ -197,57 +261,34 @@ i, em { font-style: italic }
     content: ".";
     display: block;
     height: 1px;
-    border-bottom: 2px solid rgba(0, 142, 150, 1.0);
+    border-bottom: 2px solid rgb(122, 181, 22); /* color: Pantone 369 */
     box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
     margin: 0px -30px 0px -30px;
     font-size: 0.01em;
 }
 
-div.fill .head {
-	margin: 0px -30px 0px -30px;
-	padding: 0px 30px 0px 30px;
-	background: rgba(255, 255, 255, .75);
-	border-radius: 10px 10px 0px 0px;
-}
+/*
+	Let's create some nice looking lists:
+*/
 
-ul {
-	list-style-type: disc;
+ul, ol {
 	margin: 30px 30px 30px 30px;
 	padding-left: 30px;
 	text-align: left;
 }
 
-ol {
-	list-style-type: decimal;
-	margin: 30px 30px 30px 30px;
-	padding-left: 30px;
-	text-align: left;
-}
+ul { list-style-type: disc }
+ol { list-style-type: decimal }
+ul ul, ol ol { margin: 0px 0px 0px 30px }
+ol ol { list-style-type: lower-alpha }
+li { padding: 5px 0px 5px 0px }
+.morespace li { margin: 25px; }
 
-ul ul, ol ol {
-	margin: 0px 0px 0px 30px;
-}
+/*
+	Images, iframes and source code:
+*/
 
-ol ol {
-	list-style-type: lower-alpha;
-}
-
-li {
-	padding: 5px 0px 5px 0px;
-}
-
-pre ol {
-	list-style-type: none;
-	padding: 0px 0px 0px 0px;
-	margin: 0px 0px 0px 0px;
-}
-
-.slide img {
-	margin: 0 auto;
-	display: block;
-}
-
-.slide iframe {
+.slide img, .slide iframe {
 	margin: 0 auto;
 	display: block;
 }
@@ -258,19 +299,15 @@ img[size='100%'] {
 	max-width: 100%;
 }
 
-img + * {
-	padding-top: 15px;
+iframe[size='100%'] {
+	width: 100%;
+	height: 86%;
+	background: white;
+	border: 1px solid rgba(62, 62, 59, 0.2); /* color: 20% Pantone Black 7 */
+	margin: -1px;
 }
 
-div.fill img {
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	border-radius: 10px;
-	z-index: -1;
-}
+img + * {	padding-top: 15px }
 
 pre {
 	text-align: left;
@@ -299,17 +336,14 @@ code {
 	color: black;
 }
 
-iframe[size='100%'] {
-	width: 100%;
-	height: 86%;
-	background: white;
-	border: 1px solid rgb(192, 192, 192);
-	margin: -1px;
-}
+/*
+	Highlight something by placing it inside a box.
+	The design is inspired by the boxes of LaTeX-Beamer.
+*/
 
 div.box {
 	margin: 25px 0px 25px 0px;
-	border: 1px solid rgb(192, 192, 192);
+	border: 1px solid rgba(62, 62, 59, 0.2); /* color: 20% Pantone Black 7 */
 	border-radius: 10px;
 	background: white;
 }
@@ -317,38 +351,34 @@ div.box {
 div.box h3 {
 	text-align: center;
 	color: white;
-	background: blue;
+	background: rgb(0, 157, 209); /* color: Pantone 312 */
 	border-radius: 10px 10px 0px 0px;
+	padding: 5px;
 }
 
-div.box p {
-	padding: 10px 30px 10px 30px;
-}
+div.box p, div.box ul { padding: 10px 30px 10px 30px }
 
-div.box ul {
-	padding: 10px 30px 10px 30px;
-}
+/*
+	By default tables are much to small and have no borders.
+	This code creates nice looking tables that are activated by using the class 'styled'.
+*/
 
 table.styled {
     border-collapse: collapse;
     border-spacing: 10px;
-    border: 1px solid rgba(0, 142, 150, 1.0);
+    border: 1px solid rgb(0, 157, 209); /* color: Pantone 312 */
     width: 90%;
-    margin-left: auto;
-    margin-right: auto;
+	margin: 25px auto 25px auto;
 }
 
-.styled td, .styled tr {	
-    border: 1px solid rgba(0, 142, 150, 1.0);
-}
+.styled td, .styled tr { border: 1px solid rgb(0, 157, 209) /* color: Pantone 312 */ }
+.styled thead { font-weight: bold }
+.styled td { padding: 15px }
+td.right { text-align: right }
 
-.styled thead {
-	font-weight: bold;
-}
-
-.styled td {
-	padding: 15px;
-}
+/*
+	Use this class to show whom you have cited:
+*/
 
 .cite {
 	font-size: 80%;
@@ -356,9 +386,9 @@ table.styled {
 	text-align: right;
 }
 
-.right {
-	text-align: right;
-}
+/*
+	I use the tags <dt> and <dd> to create captions for images.
+*/
 
 dd {
 	text-align: center;
@@ -367,46 +397,22 @@ dd {
 	margin-bottom: 10px;
 }
 
-table + p, img + p, dd + p {
-	 padding-top: 30px;
-}
+/*
+    And now we start to style each step separately.
+*/
 
-.present .rotate270 {
-	-webkit-transform: rotate(270deg) scale(0.75, 1.5);
-	-moz-transform: rotate(270deg) scale(0.75, 1.5);
-	-ms-transform: rotate(270deg) scale(0.75, 1.5);
-	-o-transform: rotate(270deg) scale(0.75, 1.5);
-	transform: rotate(270deg) scale(0.75, 1.5);
-}
-
-.rotate270 {
-	-webkit-transition: 1s;
-	-moz-transition: 1s;
-	-ms-transition: 1s;
-	-o-transition: 1s;
-	transition: 1s;
-	-webkit-transition-delay: 3s;
-	-moz-transition-delay: 3s;
-	-ms-transition-delay: 3s;
-	-o-transition-delay: 3s;
-	transition-delay: 3s;
-}
-
-/* Styles of single pages
-
-	start
+/*
+	This is the first slide:
 */
 
 #start hgroup {
 	margin: 100px 10px 100px 10px;
 	padding: 0px 25px 0px 25px;
-	background: rgb(192, 192, 192);
+	background: rgba(62, 62, 59, 0.2); /* color: 20% Pantone Black 7 */
 	border-radius: 30px 30px 30px 30px;
 }
 
-#start p {
-	padding: 25px 0px 25px 0px;
-}
+#start p { padding: 25px 0px 25px 0px }
 
 #title {
 	font-size: 40px;
@@ -428,6 +434,218 @@ table + p, img + p, dd + p {
 	text-align: center;
 }
 
-.morespace li{
-	margin: 25px;
+/*
+	On one slide I want to rotate an image. This will happen with a 3s delay.
+*/
+.present .rotate270 {
+	-webkit-transform: rotate(270deg) scale(0.75, 1.5);
+	-moz-transform: rotate(270deg) scale(0.75, 1.5);
+	-ms-transform: rotate(270deg) scale(0.75, 1.5);
+	-o-transform: rotate(270deg) scale(0.75, 1.5);
+	transform: rotate(270deg) scale(0.75, 1.5);
 }
+
+.rotate270 {
+	-webkit-transition: 1s;
+	-moz-transition: 1s;
+	-ms-transition: 1s;
+	-o-transition: 1s;
+	transition: 1s;
+	-webkit-transition-delay: 3s;
+	-moz-transition-delay: 3s;
+	-ms-transition-delay: 3s;
+	-o-transition-delay: 3s;
+	transition-delay: 3s;
+}
+
+/*
+    The last step is an overview.
+    There is no content in it, so we make sure it's not visible because we want
+    to be able to click on other steps.
+
+*/
+#overview { display: none }
+
+/*
+    We also make other steps visible and give them a pointer cursor using the
+    `impress-on-` class.
+*/
+.impress-on-overview .step {
+    opacity: 1;
+    cursor: pointer;
+}
+
+
+/*
+    Now, when we have all the steps styled let's give users a hint how to navigate
+    around the presentation.
+
+    The best way to do this would be to use JavaScript, show a delayed hint for a
+    first time users, then hide it and store a status in cookie or localStorage...
+
+    But I wanted to have some CSS fun and avoid additional scripting...
+
+    Let me explain it first, so maybe the transition magic will be more readable
+    when you read the code.
+
+    First of all I wanted the hint to appear only when user is idle for a while.
+    You can't detect the 'idle' state in CSS, but I delayed a appearing of the
+    hint by 5s using transition-delay.
+
+    You also can't detect in CSS if the user is a first-time visitor, so I had to
+    make an assumption that I'll only show the hint on the first step. And when
+    the step is changed hide the hint, because I can assume that user already
+    knows how to navigate.
+
+    To summarize it - hint is shown when the user is on the first step for longer
+    than 5 seconds.
+
+    The other problem I had was caused by the fact that I wanted the hint to fade
+    in and out. It can be easily achieved by transitioning the opacity property.
+    But that also meant that the hint was always on the screen, even if totally
+    transparent. It covered part of the screen and you couldn't correctly clicked
+    through it.
+    Unfortunately you cannot transition between display `block` and `none` in pure
+    CSS, so I needed a way to not only fade out the hint but also move it out of
+    the screen.
+
+    I solved this problem by positioning the hint below the bottom of the screen
+    with CSS transform and moving it up to show it. But I also didn't want this move
+    to be visible. I wanted the hint only to fade in and out visually, so I delayed
+    the fade in transition, so it starts when the hint is already in its correct
+    position on the screen.
+
+    I know, it sounds complicated ... maybe it would be easier with the code?
+*/
+
+.hint {
+    /*
+        We hide the hint until presentation is started and from browsers not supporting
+        impress.js, as they will have a linear scrollable view ...
+    */
+    display: none;
+
+    /*
+        ... and give it some fixed position and nice styles.
+    */
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 200px;
+
+    background: rgba(62, 62, 59, 0.5); /* color: 50% Pantone Black 7 */
+    color: #EEE;
+    text-align: center;
+
+    font-size: 50px;
+    padding: 20px;
+
+    z-index: 100;
+
+    /*
+        By default we don't want the hint to be visible, so we make it transparent ...
+    */
+    opacity: 0;
+
+    /*
+        ... and position it below the bottom of the screen (relative to it's fixed position)
+    */
+    -webkit-transform: translateY(400px);
+    -moz-transform:    translateY(400px);
+    -ms-transform:     translateY(400px);
+    -o-transform:      translateY(400px);
+    transform:         translateY(400px);
+
+    /*
+        Now let's imagine that the hint is visible and we want to fade it out and move out
+        of the screen.
+
+        So we define the transition on the opacity property with 1s duration and another
+        transition on transform property delayed by 1s so it will happen after the fade out
+        on opacity finished.
+
+        This way user will not see the hint moving down.
+    */
+    -webkit-transition: opacity 1s, -webkit-transform 0.5s 1s;
+    -moz-transition:    opacity 1s,    -moz-transform 0.5s 1s;
+    -ms-transition:     opacity 1s,     -ms-transform 0.5s 1s;
+    -o-transition:      opacity 1s,      -o-transform 0.5s 1s;
+    transition:         opacity 1s,         transform 0.5s 1s;
+}
+
+/*
+    Now we 'enable' the hint when presentation is initialized ...
+*/
+.impress-enabled .hint { display: block }
+
+/*
+    ... and we will show it when the first step (with id 'bored') is active.
+*/
+.impress-on-start .hint {
+    /*
+        We remove the transparency and position the hint in its default fixed
+        position.
+    */
+    opacity: 1;
+
+    -webkit-transform: translateY(0px);
+    -moz-transform:    translateY(0px);
+    -ms-transform:     translateY(0px);
+    -o-transform:      translateY(0px);
+    transform:         translateY(0px);
+
+    /*
+        Now for fade in transition we have the oposite situation from the one
+        above.
+
+        First after 4.5s delay we animate the transform property to move the hint
+        into its correct position and after that we fade it in with opacity
+        transition.
+    */
+    -webkit-transition: opacity 1s 5s, -webkit-transform 0.5s 4.5s;
+    -moz-transition:    opacity 1s 5s,    -moz-transform 0.5s 4.5s;
+    -ms-transition:     opacity 1s 5s,     -ms-transform 0.5s 4.5s;
+    -o-transition:      opacity 1s 5s,      -o-transform 0.5s 4.5s;
+    transition:         opacity 1s 5s,         transform 0.5s 4.5s;
+}
+
+/*
+    And as the last thing there is a workaround for quite strange bug.
+    It happens a lot in Chrome. I don't remember if I've seen it in Firefox.
+
+    Sometimes the element positioned in 3D (especially when it's moved back
+    along Z axis) is not clickable, because it falls 'behind' the <body>
+    element.
+
+    To prevent this, I decided to make <body> non clickable by setting
+    pointer-events property to `none` value.
+    Value if this property is inherited, so to make everything else clickable
+    I bring it back on the #impress element.
+
+    If you want to know more about `pointer-events` here are some docs:
+    https://developer.mozilla.org/en/CSS/pointer-events
+
+    There is one very important thing to notice about this workaround - it makes
+    everything 'unclickable' except what's in #impress element.
+
+    So use it wisely ... or don't use at all.
+*/
+.impress-enabled          { pointer-events: none }
+.impress-enabled #impress { pointer-events: auto }
+
+/*
+    There is one funny thing I just realized.
+
+    Thanks to this workaround above everything except #impress element is invisible
+    for click events. That means that the hint element is also not clickable.
+    So basically all of this transforms and delayed transitions trickery was probably
+    not needed at all...
+
+    But it was fun to learn about it, wasn't it?
+*/
+
+/*
+    That's all I have for you in this file.
+    Thanks for reading. I hope you enjoyed it at least as much as I enjoyed writing it
+    for you.
+*/
