Update of section about correction (part 1).
Additionally I removed all tailing spaces and tabs.

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,9 +86,9 @@ table:not(.styled) { text-align: center }
     want to leave anybody behind.
 */
 body {
-    font-family: Verdana,Arial,Helvetica,sans-serif;
+    font-family: Verdana,Helvetica,Arial,sans-serif;
 	font-weight: normal;
-    font-size: 30px;
+    font-size: 28px;
     line-height: 1.2;
     letter-spacing: -1px;
 	text-align: justify;
